[tool.poetry]
name = "the_code"
version = "0.1.0"
description = ""
authors = ["Jiří Thran Řihák <exthran@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10,<3.11"
tqdm = "^4.62.3"
pandas = "^1.3.4"
numpy = "^1.21.4"
icecream = "^2.1.1"
munkres = "^1.1.4"
scipy = "^1.7.3"
parse = "^1.19.0"
networkx = "^2.8.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
